include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})

LIST(APPEND PROTO_SRCS "ChronoMessages.pb.cc")
LIST(APPEND PROTO_HDRS "ChronoMessages.pb.h")

execute_process(
    COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} --cpp_out=. ChronoMessages.proto
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)

set(PROTOBUF_INCLUDE_DIRS ${PROTOBUF_INCLUDE_DIRS} PARENT_SCOPE)
set(PROTOBUF_LIBRARIES ${PROTOBUF_LIBRARIES} PARENT_SCOPE)
set(PROTO_SRCS ${PROTO_SRCS} PARENT_SCOPE)
set(PROTO_HDRS ${PROTO_HDRS} PARENT_SCOPE)
